<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoMainActivity1"
        android:text="@string/Logo_string1"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoMainActivity2"
        android:text="@string/Logo_string2"
        android:gravity="right"
        android:textAlignment="gravity"
        android:layout_below="@+id/logoMainActivity1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New_Exp"
        android:id="@+id/button1MainActivity"
        android:layout_below="@+id/logoMainActivity2"
        android:layout_alignLeft="@+id/button4MainActivity"
        android:layout_alignStart="@+id/button4MainActivity"
        android:layout_alignRight="@+id/button4MainActivity"
        android:layout_alignEnd="@+id/button4MainActivity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Load"
        android:id="@+id/button2MainActivity"
        android:layout_below="@+id/button1MainActivity"
        android:layout_alignLeft="@+id/button4MainActivity"
        android:layout_alignStart="@+id/button4MainActivity"
        android:layout_alignRight="@+id/button4MainActivity"
        android:layout_alignEnd="@+id/button4MainActivity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:id="@+id/button3MainActivity"
        android:layout_below="@+id/button2MainActivity"
        android:layout_alignLeft="@+id/button4MainActivity"
        android:layout_alignStart="@+id/button4MainActivity"
        android:layout_alignRight="@+id/button4MainActivity"
        android:layout_alignEnd="@+id/button4MainActivity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Guide"
        android:id="@+id/button4MainActivity"
        android:layout_below="@+id/button3MainActivity"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"/>
</RelativeLayout>